--- a/devel/py-bitstring/Makefile
+++ b/devel/py-bitstring/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2024/11/11 07:28:02 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/02/04 06:35:41 adam Exp $
 
-DISTNAME=	bitstring-4.2.3
+DISTNAME=	bitstring-4.3.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=b/bitstring/}
@@ -11,11 +11,9 @@ COMMENT=	Simple construction, analysis and modification of binary data
 LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-bitarray>=2.9.0:../../devel/py-bitarray
+DEPENDS+=	${PYPKGPREFIX}-bitarray>=3.0.0:../../devel/py-bitarray
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
