--- a/www/py-beautifulsoup4/Makefile
+++ b/www/py-beautifulsoup4/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.31 2024/01/18 10:20:45 adam Exp $
+# $NetBSD: Makefile,v 1.32 2025/02/04 08:42:15 adam Exp $
 
-DISTNAME=	beautifulsoup4-4.12.3
+DISTNAME=	beautifulsoup4-4.13.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES+=	${MASTER_SITE_PYPI:=b/beautifulsoup4/}
@@ -10,15 +10,14 @@ HOMEPAGE=	https://www.crummy.com/software/BeautifulSoup/
 COMMENT=	HTML/XML Parser for Python, version 4
 LICENSE=	mit
 
+EXTRACT_USING=	bsdtar
+
 TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling-[0-9]*:../../devel/py-hatchling
 DEPENDS+=	${PYPKGPREFIX}-lxml-[0-9]*:../../textproc/py-lxml
 DEPENDS+=	${PYPKGPREFIX}-soupsieve>=1.2:../../www/py-soupsieve
+DEPENDS+=	${PYPKGPREFIX}-typing-extensions>=4.0.0:../../devel/py-typing-extensions
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-EXTRACT_USING=	bsdtar
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
