--- a/sysutils/dinit/Makefile
+++ b/sysutils/dinit/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2025/01/29 05:13:03 imil Exp $
+# $NetBSD: Makefile,v 1.3 2025/02/04 08:47:25 imil Exp $
 
 DISTNAME=	dinit-0.19.3
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=davmac314/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -18,4 +18,5 @@ CONFIGURE_ARGS+=	--exec-prefix=${PREFIX}
 CONFIGURE_ARGS+=	--mandir=${PREFIX}/${PKGMANDIR}
 CONFIGURE_ARGS+=	--enable-shutdown
 
+.include "options.mk"
 .include "../../mk/bsd.pkg.mk"
