--- a/math/py-xarray/Makefile
+++ b/math/py-xarray/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.29 2025/01/12 14:34:47 adam Exp $
+# $NetBSD: Makefile,v 1.30 2025/02/04 09:42:31 adam Exp $
 
-DISTNAME=	xarray-2025.1.1
+DISTNAME=	xarray-2025.1.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=x/xarray/}
@@ -15,6 +15,11 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=7:../../devel/py-setuptools_scm
 DEPENDS+=	${PYPKGPREFIX}-numpy>=1.24:../../math/py-numpy
 DEPENDS+=	${PYPKGPREFIX}-packaging>=23.2:../../devel/py-packaging
 DEPENDS+=	${PYPKGPREFIX}-pandas>=2.1:../../math/py-pandas
+TEST_DEPENDS+=	${PYPKGPREFIX}-cftime>0:../../time/py-cftime
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>0:../../devel/py-test-cov
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-env>0:../../devel/py-test-env
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-timeout>0:../../devel/py-test-timeout
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-xdist>0:../../devel/py-test-xdist
 
 USE_LANGUAGES=	# none
 
