--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1067 2025/02/04 11:22:58 wiz Exp $
+# $NetBSD: Makefile,v 1.1068 2025/02/04 11:26:15 wiz Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -871,6 +871,7 @@ SUBDIR+=	vp
 SUBDIR+=	vtk
 SUBDIR+=	vtk-docs
 SUBDIR+=	vulkan-headers
+SUBDIR+=	vv
 SUBDIR+=	wallust
 SUBDIR+=	wcslib
 SUBDIR+=	webp-pixbuf-loader
