--- a/sysutils/py-loguru/Makefile
+++ b/sysutils/py-loguru/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2024/11/11 07:28:59 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2025/02/04 11:36:44 adam Exp $
 
-DISTNAME=	loguru-0.7.2
+DISTNAME=	loguru-0.7.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	sysutils python
 MASTER_SITES=	${MASTER_SITE_PYPI:=l/loguru/}
@@ -10,14 +10,12 @@ HOMEPAGE=	https://github.com/Delgan/loguru
 COMMENT=	Python logging made (stupidly) simple
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
-TEST_DEPENDS+=	${PYPKGPREFIX}-freezegun>=1.2.2:../../devel/py-freezegun
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>=4.0.0:../../devel/py-test-cov
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-mypy-plugins>=1.10.1:../../devel/py-test-mypy-plugins
+TOOL_DEPENDS+=	${PYPKGPREFIX}-flit_core>=3:../../devel/py-flit_core
+#TEST_DEPENDS+=	${PYPKGPREFIX}-freezegun>=1.2.2:../../devel/py-freezegun
+#TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>=4.0.0:../../devel/py-test-cov
+#TEST_DEPENDS+=	${PYPKGPREFIX}-test-mypy-plugins>=1.10.1:../../devel/py-test-mypy-plugins
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
