--- a/www/py-flask-jwt-extended/Makefile
+++ b/www/py-flask-jwt-extended/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2024/11/11 07:29:23 wiz Exp $
+# $NetBSD: Makefile,v 1.19 2025/02/04 13:14:31 adam Exp $
 
-DISTNAME=	Flask-JWT-Extended-4.6.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
+DISTNAME=	flask_jwt_extended-4.7.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/g}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=F/Flask-JWT-Extended/}
 
@@ -10,6 +10,8 @@ HOMEPAGE=	https://github.com/vimalloc/flask-jwt-extended
 COMMENT=	Extended JWT integration with Flask
 LICENSE=	mit
 
+WHEEL_NAME=	Flask_JWT_Extended-${PKGVERSION_NOREV}
+
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-JWT>=2.0:../../textproc/py-JWT
 DEPENDS+=	${PYPKGPREFIX}-cryptography>=3.3.1:../../security/py-cryptography
@@ -17,8 +19,6 @@ DEPENDS+=	${PYPKGPREFIX}-flask>=2.0:../../www/py-flask
 DEPENDS+=	${PYPKGPREFIX}-werkzeug>=0.14:../../www/py-werkzeug
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
