--- a/finance/py-eth-hash/Makefile
+++ b/finance/py-eth-hash/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2024/11/11 07:28:32 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2025/02/04 13:41:21 adam Exp $
 
-DISTNAME=	eth-hash-0.7.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+DISTNAME=	eth_hash-0.7.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	finance python
 MASTER_SITES=	${MASTER_SITE_PYPI:=e/eth-hash/}
 
@@ -16,8 +16,6 @@ DEPENDS+=	${PYPKGPREFIX}-cryptodome>=3.6.6:../../security/py-cryptodome
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-xdist>=2.4.0:../../devel/py-test-xdist
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
