--- a/finance/py-eth-typing/Makefile
+++ b/finance/py-eth-typing/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.19 2024/11/11 07:28:33 wiz Exp $
+# $NetBSD: Makefile,v 1.20 2025/02/04 13:44:40 adam Exp $
 
-DISTNAME=	eth_typing-4.2.3
+DISTNAME=	eth_typing-5.1.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	finance python
 MASTER_SITES=	${MASTER_SITE_PYPI:=e/eth-typing/}
@@ -11,11 +11,10 @@ COMMENT=	Common type annotations for ethereum python packages
 LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=60:../../devel/py-setuptools
+DEPENDS+=	${PYPKGPREFIX}-typing-extensions>=4.5.0:../../devel/py-typing-extensions
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-xdist>=2.4.0:../../devel/py-test-xdist
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
