--- a/sysutils/auto-admin/Makefile
+++ b/sysutils/auto-admin/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.19 2023/12/24 10:07:51 nros Exp $
+# $NetBSD: Makefile,v 1.20 2025/02/04 16:13:13 bacon Exp $
 
-DISTNAME=	auto-admin-0.8.0
+DISTNAME=	auto-admin-0.8.1
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=outpaddling/}
 
@@ -13,13 +13,13 @@ USE_LANGUAGES=	# none
 
 NO_BUILD=	yes
 
-INSTALL_ENV+=	MANDIR=${PREFIX}/${PKGMANDIR}
-
 SUBST_CLASSES+=		prefix
 SUBST_STAGE.prefix=	pre-configure
 SUBST_SED.prefix+=	-e 's|/usr/pkg|${PREFIX}|g'
 SUBST_SED.prefix+=	-e 's|/usr/pkgsrc|${PKGSRCDIR}|g'
 SUBST_FILES.prefix+=	User-scripts/auto-pkgsrc-prefix
 SUBST_FILES.prefix+=	User-scripts/auto-pkgsrc-dir
+
+MAKE_FLAGS+=	MANDIR=${PREFIX}/${PKGMANDIR}
 
 .include "../../mk/bsd.pkg.mk"
