--- a/x11/py-sip-qt6/Makefile
+++ b/x11/py-sip-qt6/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.6 2024/12/27 09:11:17 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2025/02/04 22:05:31 adam Exp $
 
-DISTNAME=	pyqt6_sip-13.9.1
+DISTNAME=	pyqt6_sip-13.10.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pyqt6_sip/sip-qt6/}
 CATEGORIES=	x11 python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pyqt6_sip/}
@@ -14,7 +14,7 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=30.3:../../devel/py-setuptools
 
 USE_LANGUAGES=	c c++
 
-WHEEL_NAME=	${DISTNAME:S/pyqt6/PyQt6/}
+WHEEL_NAME=	${DISTNAME:S/pyq/PyQ/}
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
