--- a/devel/asdf/Makefile
+++ b/devel/asdf/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2024/12/20 12:02:06 schmonz Exp $
+# $NetBSD: Makefile,v 1.13 2025/02/05 05:00:52 schmonz Exp $
 
-DISTNAME=		asdf-0.15.0
+DISTNAME=		asdf-0.16.1
 CATEGORIES=		devel
 MASTER_SITES=		${MASTER_SITE_GITHUB:=asdf-vm/}
 GITHUB_TAG=		v${PKGVERSION_NOREV}
@@ -13,50 +13,18 @@ LICENSE=		mit
 DEPENDS+=		git-base-[0-9]*:../../devel/git-base
 
 USE_LANGUAGES=		# none
-USE_TOOLS+=		bash:run
-NO_BUILD=		yes
-REPLACE_BASH=		bin/asdf
 
 AUTO_MKDIRS=		yes
 
-SUBST_CLASSES+=		prefix
-SUBST_STAGE.prefix=	do-configure
-SUBST_FILES.prefix=	lib/commands/reshim.bash
-SUBST_VARS.prefix=	PREFIX BASH
-
-SUBST_CLASSES+=		lib
-SUBST_STAGE.lib=	do-configure
-SUBST_FILES.lib=	bin/asdf lib/commands/*.bash
-SUBST_SED.lib=		-e 's|\$$(dirname "\$$(dirname "\$$0")")/lib|${PREFIX}/share/${PKGBASE}/lib|g'
-
-do-install:
-	${INSTALL_SCRIPT} ${WRKSRC}/bin/asdf \
-		${DESTDIR}${PREFIX}/bin/
-	${INSTALL_DATA} ${WRKSRC}/help.txt \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/
-	${INSTALL_DATA} ${WRKSRC}/version.txt \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/
-	${INSTALL_DATA} ${WRKSRC}/asdf.elv \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/
-	${INSTALL_DATA} ${WRKSRC}/asdf.fish \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/
-	${INSTALL_DATA} ${WRKSRC}/asdf.nu \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/
-	${INSTALL_DATA} ${WRKSRC}/asdf.sh \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/
-	${INSTALL_DATA} ${WRKSRC}/lib/utils.bash \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/lib/
-	${INSTALL_DATA} ${WRKSRC}/lib/commands/*.bash \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/lib/commands/
-	${INSTALL_DATA} ${WRKSRC}/lib/functions/*.bash \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/lib/functions/
-	${TOUCH} \
-		${DESTDIR}${PREFIX}/share/${PKGBASE}/lib/asdf_updates_disabled
-	${INSTALL_DATA} ${WRKSRC}/completions/asdf.bash \
+post-install:
+	${INSTALL_DATA} ${WRKSRC}/internal/completions/asdf.bash \
 		${DESTDIR}${PREFIX}/share/bash-completion/completions/asdf
-	${INSTALL_DATA} ${WRKSRC}/completions/asdf.fish \
+	${INSTALL_DATA} ${WRKSRC}/internal/completions/asdf.fish \
 		${DESTDIR}${PREFIX}/share/fish/vendor_completions.d/
-	${INSTALL_DATA} ${WRKSRC}/completions/_asdf \
-		${DESTDIR}${PREFIX}/share/zsh/site-functions/
+	${INSTALL_DATA} ${WRKSRC}/internal/completions/asdf.zsh \
+		${DESTDIR}${PREFIX}/share/zsh/site-functions/_asdf
 
+.include "go-modules.mk"
+
+.include "../../lang/go/go-module.mk"
 .include "../../mk/bsd.pkg.mk"
