--- a/security/oqs-provider/Makefile
+++ b/security/oqs-provider/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.6 2025/01/06 20:58:01 jschauma Exp $
+# $NetBSD: Makefile,v 1.7 2025/02/05 07:14:18 wiz Exp $
 
 VERSION=	0.8.0
 DISTNAME=	oqs-provider-${VERSION}
 DIST_SUBDIR=	${PKGNAME}
+PKGREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	${MASTER_SITE_GITHUB:=open-quantum-safe/}
 
