--- a/mail/p5-Mail-SPF/Makefile
+++ b/mail/p5-Mail-SPF/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.24 2024/11/16 12:05:53 wiz Exp $
+# $NetBSD: Makefile,v 1.25 2025/02/05 08:29:10 wen Exp $
 
-DISTNAME=	Mail-SPF-3.20240617
+DISTNAME=	Mail-SPF-3.20240923
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	mail perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Mail/}
 
