--- a/math/p5-Math-BigInt/Makefile
+++ b/math/p5-Math-BigInt/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.25 2024/11/16 12:05:58 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2025/02/05 08:34:22 wen Exp $
 
-DISTNAME=		Math-BigInt-2.003003
+DISTNAME=		Math-BigInt-2.003004
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		1
 CATEGORIES=		math perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Math/}
 
