--- a/math/p5-Spreadsheet-Read/Makefile
+++ b/math/p5-Spreadsheet-Read/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.40 2024/11/16 12:06:02 wiz Exp $
+# $NetBSD: Makefile,v 1.41 2025/02/05 08:39:23 wen Exp $
 
-DISTNAME=	Spreadsheet-Read-0.90
+DISTNAME=	Spreadsheet-Read-0.91
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	math perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Spreadsheet/}
 EXTRACT_SUFX=	.tgz
