--- a/www/py-WebTest/Makefile
+++ b/www/py-WebTest/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2024/11/11 07:29:15 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2025/02/05 13:29:01 adam Exp $
 
-DISTNAME=	WebTest-3.0.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+DISTNAME=	webtest-3.0.4
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/webt/WebT/}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=W/WebTest/}
 
@@ -9,6 +9,8 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://webtest.pythonpaste.org/
 COMMENT=	Helper to test WSGI applications
 LICENSE=	mit
+
+WHEEL_NAME=	${DISTNAME:S/webt/WebT/}
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-WebOb>=1.2:../../www/py-WebOb
@@ -21,8 +23,6 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-pyquery-[0-9]*:../../textproc/py-pyquery
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
