--- a/finance/py-eth-rlp/Makefile
+++ b/finance/py-eth-rlp/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2024/11/11 07:28:33 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2025/02/05 19:54:35 adam Exp $
 
-DISTNAME=	eth-rlp-2.1.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+DISTNAME=	eth_rlp-2.2.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	finance python
 MASTER_SITES=	${MASTER_SITE_PYPI:=e/eth-rlp/}
 
@@ -16,8 +16,6 @@ DEPENDS+=	${PYPKGPREFIX}-hexbytes>=1.2.0:../../devel/py-hexbytes
 DEPENDS+=	${PYPKGPREFIX}-rlp>=0.6.0:../../devel/py-rlp
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/pyversion.mk"
 .if ${PYTHON_VERSION} < 311
