--- a/devel/py-mako/Makefile
+++ b/devel/py-mako/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.36 2024/12/26 11:51:26 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2025/02/05 20:45:41 adam Exp $
 
-DISTNAME=	mako-1.3.8
+DISTNAME=	mako-1.3.9
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=M/Mako/}
