--- a/finance/py-eth-keys/Makefile
+++ b/finance/py-eth-keys/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2024/11/11 07:28:32 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2025/02/05 20:49:27 adam Exp $
 
-DISTNAME=	eth_keys-0.5.1
+DISTNAME=	eth_keys-0.6.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	finance python
 MASTER_SITES=	${MASTER_SITE_PYPI:=e/eth-keys/}
@@ -21,8 +21,6 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-factory_boy>=3.0.1:../../devel/py-factory_boy
 TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis>=5.10.3:../../devel/py-hypothesis
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
