--- a/x11/kf6-qqc2-desktop-style/Makefile
+++ b/x11/kf6-qqc2-desktop-style/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2024/12/05 09:43:28 markd Exp $
+# $NetBSD: Makefile,v 1.7 2025/02/05 22:15:00 markd Exp $
 
 DISTNAME=	qqc2-desktop-style-${KF6VER}
 CATEGORIES=	x11
+PKGREVISION=	1
 
 HOMEPAGE=	https://community.kde.org/Frameworks
 COMMENT=	Style for Qt Quick Controls 2 to make it follow your desktop theme
@@ -12,6 +13,7 @@ LICENSE=	gnu-lgpl-v2.1
 USE_TOOLS+=	pkg-config
 
 .include "../../devel/kf6-kcolorscheme/buildlink3.mk"
+.include "../../devel/qt6-qttools/buildlink3.mk"
 .include "../../graphics/kf6-kiconthemes/buildlink3.mk"
 .include "../../lang/qt6-qtdeclarative/buildlink3.mk"
 .include "../../x11/kf6-kirigami/buildlink3.mk"
