--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.659 2025/01/29 17:28:28 vins Exp $
+# $NetBSD: Makefile,v 1.660 2025/02/05 22:25:37 markd Exp $
 #
 
 COMMENT=	Miscellaneous utilities
@@ -157,6 +157,7 @@ SUBDIR+=	kf6-attica
 SUBDIR+=	kf6-kcontacts
 SUBDIR+=	kf6-kdav
 SUBDIR+=	kf6-kquickcharts
+SUBDIR+=	kf6-kstatusnotifieritem
 SUBDIR+=	kf6-kunitconversion
 SUBDIR+=	kfind
 SUBDIR+=	kgeography
