--- a/databases/p5-DBIx-Class-Candy/Makefile
+++ b/databases/p5-DBIx-Class-Candy/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.25 2024/11/16 12:03:25 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2025/02/05 22:43:43 wen Exp $
 
-DISTNAME=	DBIx-Class-Candy-0.005003
+DISTNAME=	DBIx-Class-Candy-0.005004
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	7
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBIx/}
 
