--- a/databases/p5-DBIx-Class-Helpers/Makefile
+++ b/databases/p5-DBIx-Class-Helpers/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.36 2024/11/16 12:03:25 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2025/02/05 22:53:59 wen Exp $
 
-DISTNAME=	DBIx-Class-Helpers-2.036000
+DISTNAME=	DBIx-Class-Helpers-2.037000
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	4
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBIx/}
 
